--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
+    "commit": "git add . && cz-customizable",
+    "release": "release-it",
+    "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
     "pkg:patch": "patch-package",
     "deploy:win": "powershell scripts/autoDeploy.bat",
     "font:prepare": "node scripts/font_extractor.cjs",
     "font:build": "node scripts/font_reset.cjs && font-spider font/index.html --no-backup && node scripts/font_move.cjs",
-    "commit": "git add . && cz",
-    "release": "release-it",
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
-    "version": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
-    "postversion": "git push --tags",
     "fix-memory-limit": "cross-env LIMIT=8048 increase-memory-limit",
-    "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
     "prepare": "husky"
   },
   "imports": {
@@ -37,16 +35,12 @@
   "type": "module",
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "node_modules/cz-customizable"
     },
     "cz-customizable": {
       "config": "./.cz-config.cjs"
     },
-    "conventional-changelog": {
-      "config": "./changelog-option.cjs"
-    },
     "@release-it/conventional-changelog": {
-      "config": "./changelog-option.cjs",
       "infile": "CHANGELOG.md",
       "ignoreRecommendedBump": true,
       "strictSemVer": true,
@@ -84,6 +78,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/cz-commitlint": "^19.4.0",
     "@iconify-json/carbon": "^1.1.37",
     "@iconify-json/logos": "^1.1.44",
     "@iconify/json": "^2.2.239",
@@ -98,9 +93,15 @@
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
+    "commitlint": "^19.4.0",
+    "commitlint-config-cz": "^0.13.3",
+    "commitlint-config-git-commit-emoji": "^1.0.0",
+    "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
+    "conventional-changelog-gitmoji-config": "^1.5.2",
     "cssnano": "^7.0.5",
     "cz-customizable": "^7.2.1",
+    "cz-message-helper": "^1.3.1",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
     "husky": "^9.1.5",
@@ -115,12 +116,12 @@
     "release-it": "^17.6.0",
     "sass": "^1.77.8",
     "sitemap": "^8.0.0",
+    "standard-version": "^9.5.0",
     "unocss": "^0.62.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-icons": "^0.19.2",
     "unplugin-vue-components": "^0.27.4",
     "vfonts": "^0.0.3",
-    "vite": "^5.4.2",
     "vite-aliases": "^0.11.7",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.1",
@@ -152,7 +153,7 @@
     "@visactor/vchart": "^1.12.1",
     "@visactor/vchart-theme": "^1.12.0",
     "@vitepress-code-preview/container": "^1.0.8",
-    "@vitepress-code-preview/plugin": "^1.0.4",
+    "@vitepress-code-preview/plugin": "^1.0.5",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "4.2.3",
@@ -180,6 +181,8 @@
     "lunisolar": "^2.5.0",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^4.0.0",
+    "markdown-it-task-checkbox": "^1.0.6",
+    "markdown-it-task-lists": "^2.1.1",
     "markdown-to-txt": "^2.0.1",
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.3.4",
@@ -204,7 +207,8 @@
     "xmind-embed-viewer": "^1.2.0"
   },
   "overrides": {
+    "vite": "^5.4.2",
     "vite-plugin-html": "^3.2.2"
   },
-  "version": "0.0.37"
+  "version": "0.0.38"
 }
