:sparkles: feat: 优化

--- a/.release-it.json
+++ b/.release-it.json
@@ -3,7 +3,7 @@
     "release": false
   },
   "git": {
-    "commitMessage": "release: v${version}"
+    "commitMessage": ":bookmark: release: v${version}"
   },
   "npm": {
     "publish": false
