:sparkles: feat: 功能完善

--- a/.hintrc
+++ b/.hintrc
@@ -8,7 +8,8 @@
       {
         "ignore": [
           "backdrop-filter",
-          "text-emphasis"
+          "text-emphasis",
+          "user-select"
         ]
       }
     ],
