--- a/package.json
+++ b/package.json
@@ -150,6 +150,8 @@
     "@iconify/iconify": "^3.1.1",
     "@lite-tree/vue": "^1.1.4",
     "@mdit-vue/shared": "^2.1.3",
+    "@mdit/plugin-ruby": "^0.13.0",
+    "@mdit/plugin-tasklist": "^0.13.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.12.1",
     "@visactor/vchart-theme": "^1.12.0",
@@ -182,9 +184,17 @@
     "lunisolar": "^2.5.0",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^4.0.0",
+    "markdown-it-front-matter": "^0.2.4",
+    "markdown-it-image-lazy-loading": "^2.0.1",
+    "markdown-it-ins": "^4.0.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-to-txt": "^2.0.1",
+    "markmap-lib": "^0.17.0",
+    "markmap-toolbar": "^0.17.0",
+    "markmap-view": "^0.17.0",
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
