--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
+    "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
     "simple-git": "^3.25.0",
