--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "gsap": "^3.12.5",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
+    "kinet": "^2.2.1",
     "lhh-utils": "^1.0.6",
     "line-reader": "^0.4.0",
     "locate-path": "^7.2.0",
@@ -178,6 +179,7 @@
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
+    "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
@@ -186,6 +188,7 @@
     "svg2roughjs": "^3.2.1",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
     "vitepress-plugin-group-icons": "^1.0.3",
