--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
     "commit": "git add . && cz-customizable",
+    "docs:version": "vmark",
+    "docs:vbuild": "vmark && vitepress build",
     "release": "release-it",
     "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
@@ -56,6 +58,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^22.5.0",
+    "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
     "busuanzi.pure.js": "^1.0.3",
@@ -88,13 +91,16 @@
     "unplugin-auto-import": "^0.18.2",
     "unplugin-icons": "^0.19.2",
     "unplugin-vue-components": "^0.27.4",
+    "version-mark": "^0.0.5",
     "vfonts": "^0.0.3",
     "vite-aliases": "^0.11.7",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.1",
     "vite-plugin-pwa": "^0.20.1",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-version-mark": "^0.1.0",
     "vitepress": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.0",
     "vitepress-plugin-changelog": "^0.1.1",
