--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.1",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
@@ -123,8 +123,8 @@
     "@imgly/background-removal": "^1.5.5",
     "@lite-tree/vue": "^1.1.4",
     "@mdit-vue/shared": "^2.1.3",
-    "@mdit/plugin-ruby": "^0.13.0",
-    "@mdit/plugin-tasklist": "^0.13.0",
+    "@mdit/plugin-ruby": "^0.13.1",
+    "@mdit/plugin-tasklist": "^0.13.1",
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.12.1",
     "@visactor/vchart-theme": "^1.12.0",
@@ -205,7 +205,8 @@
     "vue-resize-observer": "^2.0.16",
     "vue-timeago3": "^2.3.2",
     "vue3-simple-icons": "^13.2.0",
-    "xmind-embed-viewer": "^1.2.0"
+    "xmind-embed-viewer": "^1.2.0",
+    "yuppie-ui": "^0.0.7"
   },
   "overrides": {
     "vite": "^5.4.2",
