--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^22.5.1",
+    "@types/three": "^0.167.2",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
@@ -97,7 +98,7 @@
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.1",
-    "vite-plugin-pwa": "^0.20.1",
+    "vite-plugin-pwa": "^0.20.2",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.0",
@@ -156,6 +157,7 @@
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lunisolar": "^2.5.0",
+    "markdown-it-anchor": "^9.1.0",
     "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-custom-attrs": "^1.0.2",
@@ -187,11 +189,13 @@
     "oimo-esm": "^1.0.10",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
+    "resize-observer-vue": "^1.2.0",
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
     "simple-git": "^3.25.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
+    "three": "^0.167.1",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
