--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/cz-commitlint": "^19.4.0",
-    "@iconify-json/carbon": "^1.1.37",
-    "@iconify-json/logos": "^1.1.44",
-    "@iconify/json": "^2.2.242",
+    "@iconify-json/carbon": "^1.2.1",
+    "@iconify-json/logos": "^1.2.0",
+    "@iconify/json": "^2.2.243",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^8.0.1",
@@ -57,8 +57,8 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.5.1",
-    "@types/three": "^0.167.2",
+    "@types/node": "^22.5.2",
+    "@types/three": "^0.168.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
@@ -83,7 +83,7 @@
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.43",
     "release-it": "^17.6.0",
     "sass": "^1.77.8",
     "sitemap": "^8.0.0",
@@ -97,7 +97,7 @@
     "vite-aliases": "^0.11.7",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-git-revision-info": "^1.1.0",
-    "vite-plugin-html-config": "^2.0.1",
+    "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-pwa": "^0.20.2",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
@@ -118,8 +118,8 @@
     "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^8.4.1",
     "@heroicons/vue": "^2.1.5",
-    "@iconify-json/line-md": "^1.1.41",
-    "@iconify-json/mdi": "^1.1.68",
+    "@iconify-json/line-md": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.0",
     "@iconify/iconify": "^3.1.1",
     "@imgly/background-removal": "^1.5.5",
     "@lite-tree/vue": "^1.1.4",
@@ -143,8 +143,9 @@
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
+    "echarts": "^5.5.1",
+    "echarts-gl": "^2.0.9",
     "esno": "^4.7.0",
-    "floating-vue": "^5.2.2",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
@@ -192,16 +193,16 @@
     "resize-observer-vue": "^1.2.0",
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
-    "simple-git": "^3.25.0",
+    "simple-git": "^3.26.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.167.1",
+    "three": "^0.168.0",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-group-icons": "^1.0.3",
+    "vitepress-plugin-group-icons": "^1.0.4",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.2.10",
