--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cz-commitlint": "^19.4.0",
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/logos": "^1.2.0",
-    "@iconify/json": "^2.2.243",
+    "@iconify/json": "^2.2.244",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^8.0.1",
@@ -57,7 +57,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "@types/three": "^0.168.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
@@ -71,7 +71,7 @@
     "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-gitmoji-config": "^1.5.2",
-    "cssnano": "^7.0.5",
+    "cssnano": "^7.0.6",
     "cz-customizable": "^7.2.1",
     "cz-message-helper": "^1.3.1",
     "feed": "^4.2.2",
@@ -83,14 +83,14 @@
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.44",
+    "postcss": "^8.4.45",
     "release-it": "^17.6.0",
-    "sass": "^1.77.8",
+    "sass": "^1.78.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "unocss": "^0.62.3",
     "unplugin-auto-import": "^0.18.2",
-    "unplugin-icons": "^0.19.2",
+    "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "version-mark": "^0.0.5",
     "vfonts": "^0.0.3",
@@ -99,7 +99,7 @@
     "vite-plugin-externals-new": "^1.5.5",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-pwa": "^0.20.3",
+    "vite-plugin-pwa": "^0.20.5",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.0",
@@ -110,14 +110,13 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
-    "vitepress-sidebar": "^1.25.1",
-    "vue": "^3.4.38",
+    "vitepress-sidebar": "^1.25.3",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.0.0",
     "@heroicons/vue": "^2.1.5",
     "@iconify-json/line-md": "^1.2.0",
     "@iconify-json/mdi": "^1.2.0",
@@ -128,7 +127,7 @@
     "@mdit/plugin-ruby": "^0.13.1",
     "@mdit/plugin-tasklist": "^0.13.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.1",
+    "@visactor/vchart": "^1.12.3",
     "@visactor/vchart-theme": "^1.12.1",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -212,11 +211,12 @@
     "vue-timeago3": "^2.3.2",
     "vue3-simple-icons": "^13.2.0",
     "xmind-embed-viewer": "^1.2.0",
-    "yuppie-ui": "^0.0.7"
+    "yuppie-ui": "^0.0.11"
   },
   "overrides": {
     "vite": "^5.4.2",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-html": "^3.2.2",
+    "vue": "^3.5.0"
   },
   "version": "0.1.3"
 }
