--- a/package.json
+++ b/package.json
@@ -44,15 +44,15 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@commitlint/cz-commitlint": "^19.4.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cz-commitlint": "^19.5.0",
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/logos": "^1.2.0",
-    "@iconify/json": "^2.2.244",
+    "@iconify/json": "^2.2.247",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
-    "@release-it/conventional-changelog": "^8.0.1",
+    "@release-it/conventional-changelog": "^8.0.2",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
@@ -65,7 +65,7 @@
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.0",
-    "commitlint": "^19.4.1",
+    "commitlint": "^19.5.0",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -76,7 +76,7 @@
     "cz-message-helper": "^1.3.1",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
     "markdown-it": "^14.1.0",
@@ -89,7 +89,7 @@
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "unocss": "^0.62.3",
-    "unplugin-auto-import": "^0.18.2",
+    "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "version-mark": "^0.0.5",
@@ -118,7 +118,7 @@
     "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^9.0.0",
     "@heroicons/vue": "^2.1.5",
-    "@iconify-json/line-md": "^1.2.0",
+    "@iconify-json/line-md": "^1.2.1",
     "@iconify-json/mdi": "^1.2.0",
     "@iconify/iconify": "^3.1.1",
     "@imgly/background-removal": "^1.5.5",
@@ -127,7 +127,7 @@
     "@mdit/plugin-ruby": "^0.13.1",
     "@mdit/plugin-tasklist": "^0.13.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.3",
+    "@visactor/vchart": "^1.12.5",
     "@visactor/vchart-theme": "^1.12.1",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -145,6 +145,7 @@
     "default-passive-events": "^2.0.0",
     "echarts": "^5.5.1",
     "echarts-gl": "^2.0.9",
+    "element-resize-detector": "^1.2.4",
     "esno": "^4.7.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
@@ -158,7 +159,7 @@
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lunisolar": "^2.5.0",
-    "markdown-it-anchor": "^9.1.0",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-custom-attrs": "^1.0.2",
@@ -185,7 +186,7 @@
     "markmap-toolbar": "^0.17.0",
     "markmap-view": "^0.17.0",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^11.1.0",
+    "mermaid": "^11.2.0",
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
     "randomcolor": "^0.6.2",
