:rocket: chore: 更新npm包

--- a/.hintrc
+++ b/.hintrc
@@ -9,7 +9,8 @@
         "ignore": [
           "backdrop-filter",
           "text-emphasis",
-          "user-select"
+          "user-select",
+          "@view-transition"
         ]
       }
     ],
