--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cz-commitlint": "^19.5.0",
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/logos": "^1.2.0",
-    "@iconify/json": "^2.2.247",
+    "@iconify/json": "^2.2.249",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^8.0.2",
@@ -57,7 +57,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/three": "^0.168.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
@@ -83,12 +83,12 @@
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "release-it": "^17.6.0",
-    "sass": "^1.78.0",
+    "sass": "^1.79.1",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
-    "unocss": "^0.62.3",
+    "unocss": "^0.62.4",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
@@ -110,13 +110,13 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
-    "vitepress-sidebar": "^1.25.3",
+    "vitepress-sidebar": "^1.26.0",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.0.0",
+    "@faker-js/faker": "^9.0.1",
     "@heroicons/vue": "^2.1.5",
     "@iconify-json/line-md": "^1.2.1",
     "@iconify-json/mdi": "^1.2.0",
@@ -133,7 +133,8 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "4.2.3",
+    "animejs": "^3.2.2",
+    "ant-design-vue": "4.2.4",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
@@ -186,7 +187,7 @@
     "markmap-toolbar": "^0.17.0",
     "markmap-view": "^0.17.0",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^11.2.0",
+    "mermaid": "^11.2.1",
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
     "randomcolor": "^0.6.2",
@@ -203,7 +204,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-group-icons": "^1.1.0",
+    "vitepress-plugin-group-icons": "^1.2.4",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.2.10",
