--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify-json/carbon": "^1.2.1",
-    "@iconify-json/logos": "^1.2.0",
-    "@iconify/json": "^2.2.253",
+    "@iconify-json/carbon": "^1.2.2",
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify/json": "^2.2.258",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^8.0.2",
@@ -57,14 +57,14 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.7.2",
-    "@types/three": "^0.168.0",
+    "@types/node": "^22.7.5",
+    "@types/three": "^0.169.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
-    "commitizen": "^4.3.0",
+    "commitizen": "^4.3.1",
     "commitlint": "^19.5.0",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
@@ -84,11 +84,11 @@
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.47",
-    "release-it": "^17.6.0",
-    "sass": "^1.79.3",
+    "release-it": "^17.8.2",
+    "sass": "^1.79.4",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
-    "unocss": "^0.62.4",
+    "unocss": "^0.63.4",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
@@ -103,7 +103,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.0",
-    "vitepress": "^1.3.4",
+    "vitepress": "^1.4.0",
     "vitepress-markdown-it-stepper": "^0.1.0",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
@@ -116,9 +116,9 @@
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.0.2",
+    "@faker-js/faker": "^9.0.3",
     "@heroicons/vue": "^2.1.5",
-    "@iconify-json/line-md": "^1.2.1",
+    "@iconify-json/line-md": "^1.2.2",
     "@iconify-json/mdi": "^1.2.0",
     "@iconify/iconify": "^3.1.1",
     "@imgly/background-removal": "^1.5.5",
@@ -127,7 +127,7 @@
     "@mdit/plugin-ruby": "^0.13.1",
     "@mdit/plugin-tasklist": "^0.13.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.6",
+    "@visactor/vchart": "^1.12.7",
     "@visactor/vchart-theme": "^1.12.1",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -147,7 +147,7 @@
     "echarts": "^5.5.1",
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
-    "esno": "^4.7.0",
+    "esno": "^4.8.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
@@ -183,12 +183,12 @@
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "markmap-common": "^0.17.1",
-    "markmap-lib": "^0.17.1",
-    "markmap-toolbar": "^0.17.1",
-    "markmap-view": "^0.17.1",
+    "markmap-lib": "^0.17.2",
+    "markmap-toolbar": "^0.17.2",
+    "markmap-view": "^0.17.2",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^11.2.1",
-    "ofetch": "^1.4.0",
+    "mermaid": "^11.3.0",
+    "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
@@ -198,9 +198,10 @@
     "simple-git": "^3.27.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.168.0",
+    "three": "^0.169.0",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-plugin-announcement": "^0.1.2",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
