--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cz-commitlint": "^19.5.0",
     "@iconify-json/carbon": "^1.2.3",
     "@iconify-json/logos": "^1.2.3",
-    "@iconify/json": "^2.2.259",
+    "@iconify/json": "^2.2.261",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.0",
@@ -57,7 +57,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.7.6",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
@@ -84,8 +84,8 @@
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.47",
-    "release-it": "^17.8.2",
-    "sass": "^1.79.5",
+    "release-it": "^17.10.0",
+    "sass": "^1.80.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "unocss": "^0.63.4",
@@ -126,8 +126,9 @@
     "@mdit-vue/shared": "^2.1.3",
     "@mdit/plugin-ruby": "^0.13.1",
     "@mdit/plugin-tasklist": "^0.13.1",
+    "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.7",
+    "@visactor/vchart": "^1.12.8",
     "@visactor/vchart-theme": "^1.12.1",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -137,6 +138,7 @@
     "ant-design-vue": "4.2.5",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
+    "chinese-poetry": "^1.4.1",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
     "cross-env": "^7.0.3",
@@ -190,6 +192,7 @@
     "mermaid": "^11.3.0",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
+    "pinyin-pro": "^3.25.0",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "resize-observer-vue": "^1.2.0",
@@ -205,7 +208,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-group-icons": "^1.2.4",
+    "vitepress-plugin-group-icons": "^1.3.0",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.2.10",
