--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -100,6 +100,9 @@ jobs:
       # - name: Build docs
       #   run: npm run docs:build
 
+      - name: Fix Memory
+        run: npm run fix-memory-limit
+
       - name: Build docs
         run: |
           echo ${{ github.workspace }}
