--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "ant-design-vue": "4.2.5",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
+    "colorthief": "^2.6.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
     "cross-env": "^7.0.3",
@@ -159,7 +160,7 @@
     "locate-path": "^7.2.0",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
-    "lunisolar": "^2.5.0",
+    "lunisolar": "^2.5.1",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
@@ -200,6 +201,7 @@
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
     "three": "^0.169.0",
+    "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-announcement": "^0.1.3",
