--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
     "pinyin-pro": "^3.25.0",
+    "random": "^5.1.1",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "resize-observer-vue": "^1.2.0",
@@ -215,6 +216,7 @@
     "vitepress-protect-plugin": "^1.0.6",
     "vue-resize-observer": "^2.0.16",
     "vue-timeago3": "^2.3.2",
+    "vue3-autocounter": "^1.0.8",
     "vue3-simple-icons": "^13.2.0",
     "xmind-embed-viewer": "^1.2.0",
     "yuppie-ui": "^0.0.11"
