--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": false,
-    "lib": ["ESNext", "dom","DOM", "es5", "es2015.promise" ,"es2015", "es2017","es2018","es2018.promise"],
+    "lib": ["ESNext", "ES2015.Promise", "dom","DOM", "es5", "es2015.promise" ,"es2015", "es2017","es2018","es2018.promise"],
     "downlevelIteration": true,
     "paths": {
       "@/*": [
