--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify/json": "^2.2.266",
+    "@iconify/json": "^2.2.270",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
-    "@release-it/conventional-changelog": "^9.0.2",
+    "@release-it/conventional-changelog": "^9.0.3",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.8.4",
+    "@types/node": "^22.9.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-legacy": "^5.4.3",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
     "autoprefixer": "^10.4.20",
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
@@ -80,14 +80,14 @@
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "release-it": "^17.10.0",
-    "sass": "^1.80.5",
+    "sass": "^1.80.6",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
-    "unocss": "^0.63.6",
+    "unocss": "^0.64.0",
     "unplugin-auto-import": "^0.18.3",
-    "unplugin-icons": "^0.20.0",
+    "unplugin-icons": "^0.20.1",
     "unplugin-vue-components": "^0.27.4",
     "version-mark": "^0.0.5",
     "vfonts": "^0.0.3",
@@ -100,20 +100,20 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.2",
-    "vitepress": "^1.4.2",
+    "vitepress": "^1.5.0",
     "vitepress-markdown-it-stepper": "^0.1.0",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
-    "vitepress-sidebar": "^1.28.0",
+    "vitepress-sidebar": "^1.29.0",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.1.0",
+    "@faker-js/faker": "^9.2.0",
     "@heroicons/vue": "^2.1.5",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.1.2",
@@ -123,16 +123,17 @@
     "@mdit/plugin-tasklist": "^0.13.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.9",
+    "@visactor/vchart": "^1.12.10",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.2",
-    "ant-design-vue": "4.2.5",
+    "ant-design-vue": "4.2.6",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
+    "cheerio": "^1.0.0",
     "colorthief": "^2.6.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
@@ -169,7 +170,7 @@
     "markdown-it-heimu": "^1.0.0",
     "markdown-it-image-lazy-loading": "^2.0.1",
     "markdown-it-ins": "^4.0.0",
-    "markdown-it-named-code-blocks": "^1.0.5",
+    "markdown-it-named-code-blocks": "^1.0.6",
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
@@ -187,7 +188,7 @@
     "mermaid": "^11.4.0",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
-    "pinyin-pro": "^3.25.0",
+    "pinyin-pro": "^3.26.0",
     "random": "^5.1.1",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
@@ -197,7 +198,7 @@
     "simple-git": "^3.27.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.169.0",
+    "three": "^0.170.0",
     "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
