:lipstick: style: 样式美化

--- a/.hintrc
+++ b/.hintrc
@@ -10,7 +10,8 @@
           "backdrop-filter",
           "text-emphasis",
           "user-select",
-          "@view-transition"
+          "@view-transition",
+          "font-size-adjust"
         ]
       }
     ],
