--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-  "editor.smoothScrolling": true,
-  "editor.cursorBlinking": "expand",
-  "editor.cursorSmoothCaretAnimation": "on",
   "editor.guides.bracketPairs": true,
   "editor.bracketPairColorization.enabled": true,
   // 控制活动代码段是否阻止快速建议
@@ -12,7 +9,6 @@
   "editor.acceptSuggestionOnEnter": "smart",
   // 代码补全列表中，优先选择最近的建议
   "editor.suggestSelection": "recentlyUsedByPrefix",
-  "workbench.list.smoothScrolling": true,
   "markdown.copyFiles.overwriteBehavior": "overwrite",
   "markdown.copyFiles.destination": {
     "/**/*": "/public/images/cmono-${fileName}"
@@ -36,7 +32,18 @@
   "typescript.suggest.autoImports": true,
   "terminal.integrated.shellArgs.windows": [],
   "javascript.updateImportsOnFileMove.enabled": "prompt",
-  "typescript.updateImportsOnFileMove.enabled": "prompt"
+  "typescript.updateImportsOnFileMove.enabled": "prompt",
+  "editor.fontLigatures": true,
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.mouseWheelZoom": true,
+  "editor.renderWhitespace": "boundary",
+  "editor.smoothScrolling": true,
+  "editor.wordWrap": "on",
+  "files.autoGuessEncoding": true,
+  "terminal.integrated.smoothScrolling": true,
+  "workbench.list.smoothScrolling": true,
+  "workbench.editor.wrapTabs": true,
   //   // 拖拽行为
   //   "markdown.editor.drop.copyIntoWorkspace": "never",
   //   // 粘贴行为
