--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
     "three": "^0.170.0",
+    "typed.js": "^2.1.0",
     "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
