:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify/json": "^2.2.271",
+    "@iconify/json": "^2.2.274",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.3",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/three": "^0.170.0",
     "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
@@ -62,7 +62,7 @@
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
-    "commitlint": "^19.5.0",
+    "commitlint": "^19.6.0",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -73,7 +73,7 @@
     "cz-message-helper": "^1.3.1",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
     "markdown-it": "^14.1.0",
@@ -82,11 +82,11 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.4.49",
     "release-it": "^17.10.0",
-    "sass": "^1.80.7",
+    "sass": "^1.81.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
-    "unocss": "^0.64.0",
-    "unplugin-auto-import": "^0.18.3",
+    "unocss": "^0.64.1",
+    "unplugin-auto-import": "^0.18.5",
     "unplugin-icons": "^0.20.1",
     "unplugin-vue-components": "^0.27.4",
     "version-mark": "^0.0.5",
@@ -96,7 +96,7 @@
     "vite-plugin-externals-new": "^1.5.5",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-pwa": "^0.20.5",
+    "vite-plugin-pwa": "^0.21.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.2",
@@ -114,7 +114,7 @@
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^9.2.0",
-    "@heroicons/vue": "^2.1.5",
+    "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.1.2",
     "@lite-tree/vue": "^1.1.4",
@@ -123,7 +123,7 @@
     "@mdit/plugin-tasklist": "^0.13.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.10",
+    "@visactor/vchart": "^1.12.12",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -200,7 +200,8 @@
     "svg2roughjs": "^3.2.1",
     "three": "^0.170.0",
     "typed.js": "^2.1.0",
-    "vite-plugin-inspect": "^0.8.7",
+    "ua-parser-js": "^2.0.0",
+    "vite-plugin-inspect": "^0.8.8",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-announcement": "^0.1.3",
