:lipstick: style: 修复导航栏背景色

--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify/json": "^2.2.274",
+    "@iconify/json": "^2.2.276",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.3",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.9.1",
+    "@types/node": "^22.10.0",
     "@types/three": "^0.170.0",
     "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
@@ -75,7 +75,7 @@
     "flexsearch": "^0.7.43",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
-    "less": "^4.2.0",
+    "less": "^4.2.1",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
@@ -85,6 +85,7 @@
     "sass": "^1.81.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
+    "typescript": "^5.7.2",
     "unocss": "^0.64.1",
     "unplugin-auto-import": "^0.18.5",
     "unplugin-icons": "^0.20.1",
@@ -123,7 +124,7 @@
     "@mdit/plugin-tasklist": "^0.13.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.12",
+    "@visactor/vchart": "^1.12.13",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
