--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "font:build": "node scripts/font_reset.cjs && font-spider font/index.html --no-backup && node scripts/font_move.cjs",
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
     "fix-memory-limit": "cross-env LIMIT=8048 increase-memory-limit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "license:checker": "license-checker --trace-deprecation --json > ./licenses.json",
+    "license:checker:csv": "license-checker --csv > ./licenses.csv",
+    "test:unit": "vitest --ui"
   },
   "imports": {
     "#*": "./*",
@@ -109,6 +112,7 @@
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-sidebar": "^1.29.0",
+    "vitest": "^2.1.6",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
@@ -128,6 +132,9 @@
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
+    "@vitest/coverage-v8": "^2.1.6",
+    "@vitest/ui": "^2.1.6",
+    "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.2",
