--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "prepare": "husky",
     "license:checker": "license-checker --trace-deprecation --json > ./licenses.json",
     "license:checker:csv": "license-checker --csv > ./licenses.csv",
-    "test:unit": "vitest --ui"
+    "test:unit": "vitest --ui",
+    "mkcert:install": "mkcert -install",
+    "mkcert:uninstall": "mkcert -uninstall"
   },
   "imports": {
     "#*": "./*",
@@ -50,14 +52,14 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify/json": "^2.2.276",
+    "@iconify/json": "^2.2.277",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.3",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.10.1",
     "@types/three": "^0.170.0",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -82,6 +84,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
+    "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.49",
     "release-it": "^17.10.0",
@@ -100,10 +103,13 @@
     "vite-plugin-externals-new": "^1.5.5",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-pwa": "^0.21.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.3",
+    "vite-plugin-vue-devtools": "^7.6.7",
+    "vite-plugin-vue-devtools-cn": "^7.5.4",
     "vitepress": "^1.5.0",
     "vitepress-markdown-it-stepper": "^0.1.0",
     "vitepress-plugin-changelog": "^0.1.1",
@@ -124,8 +130,8 @@
     "@iconify/vue": "^4.1.2",
     "@lite-tree/vue": "^1.1.4",
     "@mdit-vue/shared": "^2.1.3",
-    "@mdit/plugin-ruby": "^0.13.1",
-    "@mdit/plugin-tasklist": "^0.13.1",
+    "@mdit/plugin-ruby": "^0.14.0",
+    "@mdit/plugin-tasklist": "^0.14.0",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.12.13",
@@ -209,7 +215,7 @@
     "three": "^0.170.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.0",
-    "vite-plugin-inspect": "^0.10.0",
+    "vite-plugin-inspect": "^0.10.1",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-announcement": "^0.1.3",
