:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.6.1",
-    "@iconify/json": "^2.2.288",
+    "@iconify/json": "^2.2.289",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.4",
     "@types/bluebird": "^3.5.42",
@@ -91,7 +91,7 @@
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.2",
-    "unocss": "^0.65.2",
+    "unocss": "^0.65.3",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-icons": "^0.22.0",
     "unplugin-vue-components": "^0.28.0",
@@ -102,6 +102,7 @@
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-externals-new": "^1.5.5",
+    "vite-plugin-fake-server": "^2.1.4",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-mkcert": "^1.17.6",
