--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "license:checker:csv": "license-checker --csv > ./licenses.csv",
     "test:unit": "vitest --ui",
     "mkcert:install": "mkcert -install",
-    "mkcert:uninstall": "mkcert -uninstall"
+    "mkcert:uninstall": "mkcert -uninstall",
+    "export-pdf": "press-export-pdf export ./zh-CN/gallery"
   },
   "imports": {
     "#*": "./*"
@@ -51,14 +52,14 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.6.1",
-    "@iconify/json": "^2.2.289",
+    "@iconify/json": "^2.2.291",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.4",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/three": "^0.171.0",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -113,6 +114,9 @@
     "vite-plugin-vue-devtools": "^7.6.8",
     "vite-plugin-vue-devtools-cn": "^7.5.4",
     "vitepress": "^1.5.0",
+    "vitepress-demo-plugin": "^1.2.3",
+    "vitepress-export-pdf": "^1.0.0",
+    "vitepress-i18n": "^1.3.1",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
@@ -135,6 +139,7 @@
     "@mdit/plugin-ruby": "^0.14.0",
     "@mdit/plugin-tasklist": "^0.14.0",
     "@pinyin-pro/data": "^1.2.0",
+    "@sakitam-gis/vitepress-playground": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.13.2",
     "@visactor/vchart-theme": "^1.12.2",
@@ -158,7 +163,7 @@
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
-    "echarts": "^5.5.1",
+    "echarts": "^5.6.0",
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
@@ -196,10 +201,10 @@
     "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
-    "markmap-common": "^0.18.0",
-    "markmap-lib": "^0.18.3",
-    "markmap-toolbar": "^0.18.3",
-    "markmap-view": "^0.18.3",
+    "markmap-common": "^0.18.4",
+    "markmap-lib": "^0.18.4",
+    "markmap-toolbar": "^0.18.4",
+    "markmap-view": "^0.18.4",
     "medium-zoom": "^1.1.0",
     "mermaid": "^11.4.1",
     "ofetch": "^1.4.1",
@@ -214,12 +219,12 @@
     "simple-git": "^3.27.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.171.0",
+    "three": "^0.172.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.0",
     "vite-plugin-inspect": "^0.10.6",
     "vite-plugin-vue-preview": "^1.3.0",
-    "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-announcement": "^0.1.3",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
@@ -229,6 +234,7 @@
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.3.0",
     "vitepress-protect-plugin": "^1.0.6",
+    "vitepress-reading-time": "^1.0.3",
     "vue-draggable-next": "^2.2.1",
     "vue-resize-observer": "^2.0.16",
     "vue-timeago3": "^2.3.2",
