:bug: fix: 修复打包失败

--- a/package.json
+++ b/package.json
@@ -139,7 +139,6 @@
     "@mdit/plugin-ruby": "^0.14.0",
     "@mdit/plugin-tasklist": "^0.14.0",
     "@pinyin-pro/data": "^1.2.0",
-    "@sakitam-gis/vitepress-playground": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.13.2",
     "@visactor/vchart-theme": "^1.12.2",
@@ -163,7 +162,7 @@
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
-    "echarts": "^5.6.0",
+    "echarts": "5.5.1",
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
