:sparkles: feat: 功能更新

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.10.7",
     "@types/three": "^0.172.0",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -131,7 +131,7 @@
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.3.0",
+    "@faker-js/faker": "^9.4.0",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.3.0",
@@ -164,13 +164,14 @@
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
+    "driver.js": "^1.3.1",
     "echarts": "5.5.1",
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
     "kinet": "^2.2.1",
@@ -209,6 +210,7 @@
     "mermaid": "^11.4.1",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
+    "pinia": "^2.3.0",
     "pinyin-pro": "^3.26.0",
     "random": "^5.1.1",
     "randomcolor": "^0.6.2",
