--- a/package.json
+++ b/package.json
@@ -52,14 +52,18 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@commitlint/cz-commitlint": "^19.6.1",
-    "@iconify/json": "^2.2.305",
+    "@iconify-json/devicon": "^1.2.15",
+    "@iconify-json/skill-icons": "^1.2.0",
+    "@iconify-json/vscode-icons": "^1.2.14",
+    "@iconify/icons-emojione": "^1.2.6",
+    "@iconify/json": "^2.2.307",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/bluebird": "^3.5.42",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/three": "^0.173.0",
     "@vitejs/plugin-legacy": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -88,15 +92,15 @@
     "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.2",
-    "sass": "^1.84.0",
+    "sass": "^1.85.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.3",
-    "unocss": "^65.4.3",
-    "unplugin-auto-import": "^19.0.0",
+    "unocss": "65.4.3",
+    "unplugin-auto-import": "^19.1.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.0.0",
-    "unplugin-vue-components": "^28.0.0",
+    "unplugin-vue-components": "^28.1.0",
     "version-mark": "^0.0.5",
     "vfonts": "^0.0.3",
     "vite-aliases": "^0.11.8",
@@ -113,7 +117,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.4",
-    "vite-plugin-vue-devtools": "^7.7.1",
+    "vite-plugin-vue-devtools": "^7.7.2",
     "vite-plugin-vue-devtools-cn": "^7.5.4",
     "vitepress": "^1.6.3",
     "vitepress-demo-plugin": "^1.2.3",
@@ -125,7 +129,6 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
-    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-sidebar": "^1.31.0",
     "vitest": "^3.0.5",
     "vue3-tabs-component": "^1.3.7"
@@ -133,7 +136,7 @@
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.4.0",
+    "@faker-js/faker": "^9.5.0",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.3.0",
@@ -141,10 +144,12 @@
     "@mdit-vue/shared": "^2.1.3",
     "@mdit/plugin-ruby": "^0.16.0",
     "@mdit/plugin-tasklist": "^0.16.0",
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@mermaid-js/mermaid-zenuml": "^0.2.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.13.4",
+    "@visactor/vchart": "^1.13.5",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -173,6 +178,7 @@
     "esno": "^4.8.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
@@ -181,7 +187,7 @@
     "line-reader": "^0.4.0",
     "locate-path": "^7.2.0",
     "lodash-es": "^4.17.21",
-    "lunisolar": "^2.5.1",
+    "lunisolar": "^2.5.2",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
@@ -205,13 +211,13 @@
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "markmap-common": "^0.18.9",
-    "markmap-lib": "^0.18.9",
-    "markmap-toolbar": "^0.18.9",
-    "markmap-view": "^0.18.9",
+    "markmap-lib": "^0.18.11",
+    "markmap-toolbar": "^0.18.10",
+    "markmap-view": "^0.18.10",
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
-    "pinia": "^3.0.0",
+    "pinia": "^3.0.1",
     "pinyin-pro": "^3.26.0",
     "random": "^5.1.1",
     "randomcolor": "^0.6.2",
@@ -220,21 +226,23 @@
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
     "simple-git": "^3.27.0",
+    "svg-pan-zoom-container": "^0.6.1",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
     "three": "^0.173.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.2",
-    "vite-plugin-inspect": "^10.1.1",
+    "vite-plugin-inspect": "^10.2.1",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-announcement": "^0.1.4",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-detype": "^0.7.0",
-    "vitepress-plugin-group-icons": "^1.3.5",
+    "vitepress-plugin-group-icons": "^1.3.6",
     "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-nprogress": "^0.0.4",
+    "vitepress-plugin-panzoom-mermaid": "^2.0.21",
     "vitepress-plugin-rss": "^0.3.1",
     "vitepress-protect-plugin": "^1.0.6",
     "vitepress-reading-time": "^1.0.3",
