--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
+    "docs:pdf": "npm run docs:build && node generate-pdf.js",
     "commit": "git add . && cz-customizable",
     "docs:version": "vmark",
     "docs:vbuild": "vmark && vitepress build",
@@ -83,6 +84,7 @@
     "cz-message-helper": "^2.0.0",
     "feed": "^4.2.2",
     "flexsearch": "^0.8.103",
+    "glob": "^11.0.1",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.2",
@@ -93,6 +95,8 @@
     "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
+    "puppeteer": "^24.4.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.86.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
@@ -107,6 +111,7 @@
     "vfonts": "^0.0.3",
     "vite-aliases": "^0.11.8",
     "vite-plugin-alias-import-checker": "^0.1.0",
+    "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-parse": "^1.0.15",
@@ -218,6 +223,7 @@
     "markmap-lib": "^0.18.11",
     "markmap-toolbar": "^0.18.10",
     "markmap-view": "^0.18.10",
+    "md-to-pdf": "^5.2.4",
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
