:sparkles: feat: 功能优化

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,6 @@ font/JetBrains
 font/JetBrainsTtf
 font/JetBrainsMapleMono
 font/JetBrainsMapleMonoTtf
+font/MapleMono
+font/MapleMonoTtf
 font/temp
