--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/cz-commitlint": "^19.8.0",
-    "@iconify-json/devicon": "^1.2.22",
+    "@iconify-json/devicon": "^1.2.23",
     "@iconify-json/skill-icons": "^1.2.0",
-    "@iconify-json/vscode-icons": "^1.2.17",
+    "@iconify-json/vscode-icons": "^1.2.18",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.321",
+    "@iconify/json": "^2.2.322",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/bluebird": "^3.5.42",
@@ -66,9 +66,9 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.13.15",
     "@types/opentype.js": "^1.3.8",
-    "@types/three": "^0.174.0",
+    "@types/three": "^0.175.0",
     "@vitejs/plugin-legacy": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "autoprefixer": "^10.4.21",
@@ -96,11 +96,11 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
     "puppeteer": "^24.4.0",
-    "sass": "^1.86.0",
+    "sass": "^1.86.1",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.8.2",
-    "unocss": "^66.0.0",
+    "unocss": "65.5.0",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -117,7 +117,7 @@
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-pwa": "^0.21.2",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.4",
@@ -134,7 +134,7 @@
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-sidebar": "^1.31.1",
-    "vitest": "^3.0.9",
+    "vitest": "^3.1.1",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
@@ -153,12 +153,12 @@
     "@mermaid-js/mermaid-zenuml": "^0.2.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "1.13.5",
+    "@visactor/vchart": "1.13.8",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.0.9",
-    "@vitest/ui": "^3.0.9",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vitest/ui": "^3.1.1",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
@@ -213,7 +213,7 @@
     "markdown-it-sup": "^2.0.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-task-lists": "^2.1.1",
-    "markdown-it-todo-lists": "^0.1.7",
+    "markdown-it-todo-lists": "^0.1.8",
     "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
@@ -238,7 +238,7 @@
     "svg-pan-zoom-container": "^0.6.1",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.174.0",
+    "three": "^0.175.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.3",
     "vite-plugin-inspect": "^11.0.0",
