:bug: fix: try 1

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "set NODE_OPTIONS=--max-old-space-size=4096 && vitepress build",
     "docs:test": "esno ./utils/build-version.ts",
-    "docs:preview": "vitepress preview",
+    "docs:preview": "vitepress preview --host",
     "docs:pdf": "npm run docs:build && node generate-pdf.js",
     "commit": "git add . && cz-customizable",
     "docs:version": "vmark",
@@ -228,7 +228,7 @@
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
-    "vitepress-plugin-group-icons": "^1.5.1",
+    "vitepress-plugin-group-icons": "^1.5.2",
     "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-panzoom-mermaid": "^2.0.21",
     "vitepress-plugin-rss": "^0.3.1",
