:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.19",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.329",
+    "@iconify/json": "^2.2.330",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
@@ -98,7 +98,7 @@
     "mockjs": "^1.1.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
-    "sass": "^1.86.3",
+    "sass": "^1.87.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.8.3",
@@ -120,14 +120,14 @@
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-version-mark": "^0.1.4",
-    "vitepress": "^2.0.0-alpha.4",
+    "vitepress": "^2.0.0-alpha.5",
     "vitepress-demo-plugin": "^1.4.1",
     "vitepress-i18n": "^1.3.3",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-tabs": "^0.7.0",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
@@ -142,8 +142,8 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/ui": "^3.1.1",
+    "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
@@ -195,6 +195,7 @@
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
+    "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
