--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commit": "git add . && cz-customizable",
     "docs:version": "vmark",
     "docs:vbuild": "vmark && vitepress build",
+    "logo:build": "esno scripts/build-logo.cjs",
     "release": "release-it",
     "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
@@ -98,11 +99,13 @@
     "mermaid": "^11.6.0",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
+    "opentype.js": "^1.3.4",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
     "sass": "^1.87.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
+    "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
     "unocss": "^66.0.0",
     "unplugin-auto-import": "^19.1.2",
@@ -210,7 +213,6 @@
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
-    "opentype.js": "^1.3.4",
     "pinia": "^3.0.2",
     "pinyin-pro": "^3.26.0",
     "random": "^5.4.0",
