:sparkles: feat: 增加AI支持

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "docs:vbuild": "vmark && vitepress build",
     "logo:build": "esno scripts/build-logo.cjs",
     "release": "release-it",
+    "inspect": "npx node-modules-inspector",
     "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
     "pkg:patch": "patch-package",
@@ -63,17 +64,17 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.20",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.332",
+    "@iconify/json": "^2.2.335",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.15.2",
+    "@types/node": "^22.15.12",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.176.0",
-    "@vitejs/plugin-legacy": "^6.1.0",
+    "@vitejs/plugin-legacy": "^6.1.1",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
@@ -99,15 +100,18 @@
     "mermaid": "^11.6.0",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
+    "node-modules-inspector": "^0.6.7",
     "opentype.js": "^1.3.4",
     "patch-package": "^8.0.0",
+    "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
     "sass": "^1.87.0",
     "sitemap": "^8.0.0",
+    "sonda": "^0.7.1",
     "standard-version": "^9.5.0",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.0.0",
+    "unocss": "^66.1.0",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -124,16 +128,17 @@
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
+    "vite-plugin-progress": "^0.0.7",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-version-mark": "^0.1.4",
-    "vitepress": "^2.0.0-alpha.5",
     "vitepress-demo-plugin": "^1.4.1",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
+    "vitepress-plugin-llms": "^1.1.3",
     "vitepress-plugin-markdown-define": "^1.0.2",
-    "vitepress-plugin-tabs": "^0.7.0",
-    "vitest": "^3.1.2"
+    "vitepress-plugin-tabs": "^0.7.1",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
@@ -141,15 +146,15 @@
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
-    "@iconify/vue": "^4.3.0",
+    "@iconify/vue": "^5.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.1.2",
-    "@vitest/ui": "^3.1.2",
+    "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/ui": "^3.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
@@ -175,7 +180,7 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.12.7",
+    "gsap": "^3.13.0",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
     "kinet": "^2.2.1",
@@ -249,6 +254,7 @@
     "release-it": "^18.0.0",
     "vite": "^6.0.0",
     "vite-plugin-html": "^3.2.2",
+    "vitepress": "^2.0.0-alpha.5",
     "vue": "^3.5.13"
   },
   "version": "0.5.9"
