:sparkles: feat: 优化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,7 @@
   "explorer.fileNesting.patterns": {
     "index.html": "index.html,index.*.html,*.css",
     "package.json": ".nvmrc,.npmrc,tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,*.config.mjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,.node-version,.browserslistrc,.hintrc,licenses.csv",
-    ".env": "env.*,.env.*",
+    ".env": "env.*,.env.*,.robots.*.txt",
     "components.d.ts": "auto-imports.d.ts,components.d.ts",
     "index.md": "index.md,archives.md,tags.md,me.*.md,manuals.md,resume.md,about.md,en-US.md,zh-CN.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md",
     "Dockerfile": "Dockerfile, .dockerignore"
