--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.20",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.336",
+    "@iconify/json": "^2.2.337",
     "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -107,10 +107,12 @@
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
-    "sass": "^1.87.0",
+    "sass": "^1.88.0",
+    "sharp": "^0.34.1",
     "sitemap": "^8.0.0",
     "sonda": "^0.7.1",
     "standard-version": "^9.5.0",
+    "svgo": "^3.3.2",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
     "unocss": "^66.1.1",
@@ -127,11 +129,13 @@
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-remove-console": "^2.2.0",
+    "vite-plugin-robots": "^1.0.5",
     "vite-plugin-version-mark": "^0.1.4",
     "vitepress-demo-plugin": "^1.4.1",
     "vitepress-i18n": "^1.3.4",
